syntax = "proto3";
package ticket_service;
option go_package = "github.com/psds-microservice/ticket-service/pkg/gen/ticket_service;ticket_service";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service TicketService {
  rpc CreateTicket (CreateTicketRequest) returns (Ticket) {
    option (google.api.http) = { post: "/api/v1/tickets"; body: "*" }; }
  rpc GetTicket (GetTicketRequest) returns (Ticket) {
    option (google.api.http) = { get: "/api/v1/tickets/{id}" }; }
  rpc ListTickets (ListTicketsRequest) returns (ListTicketsResponse) {
    option (google.api.http) = { get: "/api/v1/tickets" }; }
  rpc UpdateTicket (UpdateTicketRequest) returns (Ticket) {
    option (google.api.http) = { put: "/api/v1/tickets/{id}"; body: "*" }; }
}

message CreateTicketRequest {
  string session_id = 1;
  string client_id = 2;
  string operator_id = 3;
  string status = 4;
  string priority = 5;
  string region = 6;
  string subject = 7;
  string notes = 8;
}

message GetTicketRequest {
  int64 id = 1;
}

message ListTicketsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string client_id = 3;
  string operator_id = 4;
  string status = 5;
  string region = 6;
}

message UpdateTicketRequest {
  int64 id = 1;
  string subject = 2;
  string notes = 3;
  string status = 4;
  string priority = 5;
  string region = 6;
}

message Ticket {
  int64 id = 1;
  string session_id = 2;
  string client_id = 3;
  string operator_id = 4;
  string status = 5;
  string priority = 6;
  string region = 7;
  string subject = 8;
  string notes = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp closed_at = 12;
}

message ListTicketsResponse {
  repeated Ticket tickets = 1;
  int32 total = 2;
}
